--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2024"
 
 [dependencies]
 ratatui = { version = "0.29.0", features = ["all-widgets"] }
-reqwest = { version = "0.12.23", default-features = false, features = ['rustls-tls', 'blocking']}
+reqwest = { version = "0.12.23", default-features = false, features = ['rustls-tls', 'blocking', 'brotli', 'gzip']}
 tui-input = "0.14.0"
