--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2024"
 [dependencies]
 ratatui = { version = "0.29.0", features = ["all-widgets"] }
 reqwest = { version = "0.12.23", default-features = false, features = ['rustls-tls', 'blocking', 'brotli', 'gzip', 'json']}
+serde_json = "1.0.145"
 tui-input = "0.14.0"
