ci: git cliff step does not use GH token
This seems to cause a problem. This commit is a test wheather auth was a
problem.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,8 @@ jobs:
 
       - name: Install git-cliff
         uses: kenji-miyake/setup-git-cliff@v2
+        with:
+          token: null
 
       - name: Generate CHANGELOG.md
         id: changelog
