fix: another attempt to fix git cliff

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,10 +35,11 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          git cliff --latest --output CHANGELOG.md >/dev/null
           {
             echo "changelog<<EOF"
             cat CHANGELOG.md
+            git cliff --latest
+            echo
             echo "EOF"
           } >> "$GITHUB_OUTPUT"
 
