--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ ratatui = { version = "0.29.0", features = ["all-widgets"] }
 reqwest = { version = "0.12.23", default-features = false, features = ['rustls-tls', 'blocking', 'brotli', 'gzip', 'json']}
 serde_json = "1.0.145"
 tui-input = "0.14.0"
+tui-textarea = "0.7.0"
 unicode-segmentation = "1.12.0"
