--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.4.0"
 edition = "2024"
 
 [dependencies]
+human-panic = "2.0.4"
 ratatui = { version = "0.29.0", features = ["all-widgets"] }
 reqwest = { version = "0.12.23", default-features = false, features = ['rustls-tls', 'blocking', 'brotli', 'gzip', 'json']}
 serde_json = "1.0.145"
