--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,53 +16,64 @@ env:
   BINARY_NAME: parsel
 
 jobs:
-  generate-changelog:
+  changelog:
     name: Generate changelog
     runs-on: ubuntu-latest
+    outputs:
+      content: ${{ steps.git-cliff.outputs.content }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Install git-cliff
-        uses: kenji-miyake/setup-git-cliff@v2
+      - name: Generate a changelog
+        uses: orhun/git-cliff-action@v4
+        id: git-cliff
         with:
-          token: null
+          args: --latest
+        env:
+          GITHUB_REPO: ${{ github.repository }}
 
-      - name: Generate CHANGELOG.md
-        id: changelog
-        shell: bash
-        run: |
-          set -euo pipefail
-          {
-            echo "changelog<<EOF"
-            git cliff --latest
-            echo
-            echo "EOF"
-          } >> "$GITHUB_OUTPUT"
+      - name: Print the changelog
+        run: cat "${{ steps.git-cliff.outputs.changelog }}"
+
   build:
     name: Build ${{ matrix.name }}
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - target: x86_64-unknown-linux-musl
-            os: ubuntu-latest
-            name: linux-x64-static
-            archive_ext: tar.gz
-          - target: x86_64-unknown-linux-gnu
-            os: ubuntu-latest
-            name: linux-x64
-            archive_ext: tar.gz
-          - target: x86_64-apple-darwin
-            os: macos-13
-            name: darwin-x64
-            archive_ext: tar.gz
-          - target: aarch64-apple-darwin
-            os: macos-14
-            name: darwin-arm64
-            archive_ext: tar.gz
+         include:
+            - target: x86_64-unknown-linux-gnu
+              os: ubuntu-latest
+              name: linux-x86_64
+              archive_ext: tar.gz
+
+            - target: aarch64-unknown-linux-gnu
+              os: ubuntu-24.04-arm
+              name: linux-arm
+              archive_ext: tar.gz
+
+            - target: aarch64-apple-darwin
+              os: macos-latest
+              name: darwin-aarch64
+              archive_ext: tar.gz
+
+            - target: x86_64-apple-darwin
+              os: macos-15-intel
+              name: darwin-x86_64
+              archive_ext: tar.gz
+
+            - target: x86_64-pc-windows-msvc
+              os: windows-latest
+              name: windows-x86_64
+              archive_ext: zip
+
+            - target: aarch64-pc-windows-msvc
+              os: windows-11-arm
+              name: windows-arm
+              archive_ext: zip
+       
 
     runs-on: ${{ matrix.os }}
 
@@ -75,20 +86,20 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
-      - name: Cache cargo
-        uses: Swatinem/rust-cache@v2
-
-      - name: Install musl tools (Linux MUSL only)
-        if: contains(matrix.target, 'musl')
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y musl-tools
+      - name: Cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ hashFiles('**/Cargo.lock') }}
 
       - name: Build release
         shell: bash
         run: |
           set -euo pipefail
-          cargo build --locked --release --target "${{ matrix.target }}"
+          cargo build --release --target "${{ matrix.target }}"
 
       - name: Package
         id: package
@@ -97,16 +108,25 @@ jobs:
           set -euo pipefail
           VERSION="${GITHUB_REF#refs/tags/}"
           TARGET_DIR="target/${{ matrix.target }}/release"
+
+          if [[ "${{ runner.os }}" == "Windows" ]]; then
+           BIN="${TARGET_DIR}/${BINARY_NAME}.exe"
+          else
           BIN="${TARGET_DIR}/${BINARY_NAME}"
+          fi
 
           test -f "$BIN" || { echo "Binary missing: $BIN"; exit 1; }
 
           ARCHIVE="${BINARY_NAME}-${{ matrix.name }}.${{ matrix.archive_ext }}"
-
           STAGE="$(mktemp -d)"
-          install -m 0755 "$BIN" "$STAGE/${BINARY_NAME}"
+          install -m 0755 "$BIN" "$STAGE/$(basename "$BIN")"
 
+          if [[ "${{ runner.os }}" == "Windows" ]]; then
+           7z a "$ARCHIVE" "$STAGE"/*
+          else
           tar -C "$STAGE" -czf "$ARCHIVE" .
+          fi
+
           echo "archive=$ARCHIVE" >> "$GITHUB_OUTPUT"
 
       - name: Upload packaged artifact
@@ -119,7 +139,7 @@ jobs:
 
   release:
     name: Create release
-    needs: [generate-changelog, build]
+    needs: [changelog, build]
     runs-on: ubuntu-latest
 
     steps:
@@ -128,11 +148,16 @@ jobs:
         with:
           path: artifacts
 
+      - name: List artifacts
+        run: find artifacts -type f -maxdepth 2 \( -name "*.tar.gz" -o -name "*.zip" \)
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         if: github.ref_type == 'tag'
         with:
-          body: ${{ steps.changelog.outputs.changelog }}
+          body: ${{ needs.changelog.outputs.content }}
           draft: false
           prerelease: ${{ contains(github.ref_name, '-') }}
-          files: artifacts/**/*.tar.gz
+          files: |
+            artifacts/**/*.tar.gz
+            artifacts/**/*.zip
