--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,8 @@
 [package]
-name = "parsel"
-version = "0.5.0"
+name = "parsel_v2"
+version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-human-panic = "2.0.4"
-ratatui = { version = "0.29.0", features = ["all-widgets"] }
-reqwest = { version = "0.12.25", default-features = false, features = ['rustls-tls', 'blocking', 'brotli', 'gzip', 'json']}
-serde_json = "1.0.145"
-tui-input = "0.14.0"
+ratatui = "0.30.0"
 tui-textarea = "0.7.0"
-unicode-segmentation = "1.12.0"
