--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ curl-rest = { git = "https://github.com/StanleyMasinde/curl-rest" }
 ratatui = "0.30.0"
 serde_json = "1.0.149"
 tui-input = "0.15.0"
+once_cell = "1.20.2"
+tree-sitter = "0.26.3"
+tree-sitter-highlight = "0.26.3"
+tree-sitter-html = "0.23.2"
+tree-sitter-json = "0.24.8"
