--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "parsel_v2"
-version = "0.1.0"
+name = "parsel"
+version = "0.5.0"
 edition = "2024"
 
 [dependencies]
-curl-rest = { git = "https://github.com/StanleyMasinde/curl-rest" }
+curl-rest = "0.3"
 ratatui = "0.30.0"
 serde_json = "1.0.149"
 tui-input = "0.15.0"
